[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Input_field.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[node name="Input_field" type="Tabs"]
margin_right = 300.0
margin_bottom = 330.0
tab_close_display_policy = 2
drag_to_rearrange_enabled = true
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 300.0
margin_bottom = 330.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Minimize" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -701.0
margin_top = -1.0
margin_right = -659.0
margin_bottom = 19.0
text = "x"

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 90.0
margin_top = 19.0
margin_right = 210.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Passwort eingeben"

[node name="Button_0" type="Button" parent="CanvasLayer"]
margin_left = 15.0
margin_top = 280.0
margin_right = 85.0
margin_bottom = 315.0
text = "0"

[node name="Input_field_label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -400.0
margin_top = 49.0
margin_right = -260.0
margin_bottom = 65.0
custom_styles/normal = SubResource( 1 )
align = 1
valign = 1

[node name="Button_entf" type="Button" parent="CanvasLayer"]
margin_left = 100.0
margin_top = 280.0
margin_right = 170.0
margin_bottom = 315.0
text = "ENTF"

[node name="Button_enter" type="Button" parent="CanvasLayer"]
margin_left = 185.0
margin_top = 280.0
margin_right = 285.0
margin_bottom = 315.0
text = "ENTER"

[node name="Button_1" type="Button" parent="CanvasLayer"]
margin_left = 15.0
margin_top = 220.0
margin_right = 85.0
margin_bottom = 255.0
text = "1"

[node name="Button_2" type="Button" parent="CanvasLayer"]
margin_left = 100.0
margin_top = 220.0
margin_right = 170.0
margin_bottom = 255.0
text = "2"

[node name="Button_3" type="Button" parent="CanvasLayer"]
margin_left = 185.0
margin_top = 220.0
margin_right = 255.0
margin_bottom = 255.0
text = "3"

[node name="Button_4" type="Button" parent="CanvasLayer"]
margin_left = 15.0
margin_top = 160.0
margin_right = 85.0
margin_bottom = 195.0
text = "4"

[node name="Button_5" type="Button" parent="CanvasLayer"]
margin_left = 100.0
margin_top = 160.0
margin_right = 170.0
margin_bottom = 195.0
text = "5"

[node name="Button_6" type="Button" parent="CanvasLayer"]
margin_left = 185.0
margin_top = 160.0
margin_right = 255.0
margin_bottom = 195.0
text = "6"

[node name="Button_7" type="Button" parent="CanvasLayer"]
margin_left = 15.0
margin_top = 100.0
margin_right = 85.0
margin_bottom = 135.0
text = "7"

[node name="Button_8" type="Button" parent="CanvasLayer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 170.0
margin_bottom = 135.0
text = "8"

[node name="Button_9" type="Button" parent="CanvasLayer"]
margin_left = 185.0
margin_top = 100.0
margin_right = 255.0
margin_bottom = 135.0
text = "9"

[connection signal="pressed" from="CanvasLayer/Minimize" to="." method="_on_Minimize_pressed"]
[connection signal="pressed" from="CanvasLayer/Button_0" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button_entf" to="." method="_on_Button_entf_pressed"]
[connection signal="pressed" from="CanvasLayer/Button_enter" to="." method="_on_Button_enter_pressed"]
[connection signal="pressed" from="CanvasLayer/Button_1" to="." method="_on_Button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Button_2" to="." method="_on_Button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Button_3" to="." method="_on_Button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Button_4" to="." method="_on_Button_4_pressed"]
[connection signal="pressed" from="CanvasLayer/Button_5" to="." method="_on_Button_5_pressed"]
[connection signal="pressed" from="CanvasLayer/Button_6" to="." method="_on_Button_6_pressed"]
[connection signal="pressed" from="CanvasLayer/Button_7" to="." method="_on_Button_7_pressed"]
[connection signal="pressed" from="CanvasLayer/Button_8" to="." method="_on_Button_8_pressed"]
[connection signal="pressed" from="CanvasLayer/Button_9" to="." method="_on_Button_9_pressed"]
